feat: add reactions

--- a/api/comments/models/comments.settings.json
+++ b/api/comments/models/comments.settings.json
@@ -16,8 +16,8 @@
       "type": "string"
     },
     "post": {
-      "model": "posts",
-      "via": "comments"
+      "via": "comments",
+      "model": "posts"
     }
   }
 }
