--- a/api/dislikes/models/dislikes.settings.json
+++ b/api/dislikes/models/dislikes.settings.json
@@ -13,8 +13,8 @@
       "type": "string"
     },
     "post": {
-      "model": "posts",
-      "via": "dislikes"
+      "via": "dislikes",
+      "model": "posts"
     }
   }
 }
