--- a/api/likes/models/likes.settings.json
+++ b/api/likes/models/likes.settings.json
@@ -13,8 +13,8 @@
       "type": "string"
     },
     "post": {
-      "model": "posts",
-      "via": "likes"
+      "via": "likes",
+      "model": "posts"
     }
   }
 }
