--- a/api/posts/models/posts.settings.json
+++ b/api/posts/models/posts.settings.json
@@ -2,7 +2,7 @@
   "kind": "collectionType",
   "collectionName": "posts",
   "info": {
-    "name": "Posts"
+    "name": "posts"
   },
   "options": {
     "increments": true,
