--- a/package.json
+++ b/package.json
@@ -14,21 +14,21 @@
     "faker": "^4.1.0"
   },
   "dependencies": {
-    "strapi": "3.0.0-beta.20",
-    "strapi-admin": "3.0.0-beta.20",
-    "strapi-connector-mongoose": "3.0.0-beta.20",
-    "strapi-plugin-content-manager": "3.0.0-beta.20",
-    "strapi-plugin-content-type-builder": "3.0.0-beta.20",
-    "strapi-plugin-email": "3.0.0-beta.20",
-    "strapi-plugin-upload": "3.0.0-beta.20",
-    "strapi-plugin-users-permissions": "3.0.0-beta.20",
-    "strapi-utils": "3.0.0-beta.20"
+    "strapi": "3.0.0",
+    "strapi-admin": "3.0.0",
+    "strapi-utils": "3.0.0",
+    "strapi-plugin-content-type-builder": "3.0.0",
+    "strapi-plugin-content-manager": "3.0.0",
+    "strapi-plugin-users-permissions": "3.0.0",
+    "strapi-plugin-email": "3.0.0",
+    "strapi-plugin-upload": "3.0.0",
+    "strapi-connector-mongoose": "3.0.0"
   },
   "author": {
     "name": "A Strapi developer"
   },
   "strapi": {
-    "uuid": "67e96417-23d7-496b-a64c-dd525b85e90f"
+    "uuid": "6cc6b78e-9533-49f3-b282-accac57d387d"
   },
   "engines": {
     "node": ">=10.0.0",
