feat(posts): create post with image from library

--- a/api/comments/models/comments.settings.json
+++ b/api/comments/models/comments.settings.json
@@ -25,8 +25,8 @@
       "type": "string"
     },
     "post": {
-      "model": "posts",
-      "via": "comments"
+      "via": "comments",
+      "model": "posts"
     }
   }
 }
