feat(comments): add reactions

--- a/api/comments/models/comments.settings.json
+++ b/api/comments/models/comments.settings.json
@@ -27,6 +27,10 @@
     "post": {
       "via": "comments",
       "model": "posts"
+    },
+    "reactions": {
+      "via": "comment",
+      "collection": "reactions"
     }
   }
 }
