--- a/api/posts/models/posts.settings.json
+++ b/api/posts/models/posts.settings.json
@@ -29,8 +29,8 @@
       "required": false
     },
     "reactions": {
-      "collection": "reactions",
-      "via": "post"
+      "via": "post",
+      "collection": "reactions"
     },
     "image": {
       "model": "file",
