--- a/api/posts/models/posts.settings.json
+++ b/api/posts/models/posts.settings.json
@@ -29,8 +29,8 @@
       "required": false
     },
     "reactions": {
-      "via": "post",
-      "collection": "reactions"
+      "collection": "reactions",
+      "via": "post"
     },
     "image": {
       "model": "file",
@@ -42,6 +42,14 @@
       ],
       "plugin": "upload",
       "required": false
+    },
+    "reposts": {
+      "collection": "posts",
+      "via": "repost"
+    },
+    "repost": {
+      "model": "posts",
+      "via": "reposts"
     }
   }
 }
