feat: add search feature

--- a/api/comments/models/comments.settings.json
+++ b/api/comments/models/comments.settings.json
@@ -21,9 +21,6 @@
     "content": {
       "type": "text"
     },
-    "author": {
-      "type": "string"
-    },
     "post": {
       "via": "comments",
       "model": "posts"
@@ -31,6 +28,10 @@
     "reactions": {
       "via": "comment",
       "collection": "reactions"
+    },
+    "author": {
+      "via": "comments",
+      "model": "authors"
     }
   }
 }
