feat(notifications): add notification token to user model

--- a/api/authors/models/authors.settings.json
+++ b/api/authors/models/authors.settings.json
@@ -30,6 +30,9 @@
     "reactions": {
       "collection": "reactions",
       "via": "author"
+    },
+    "notificationToken": {
+      "type": "string"
     }
   }
 }
