--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
   "dependencies": {
     "strapi": "3.0.0",
     "strapi-admin": "3.0.0",
-    "strapi-utils": "3.0.0",
-    "strapi-plugin-content-type-builder": "3.0.0",
+    "strapi-connector-mongoose": "3.0.0",
     "strapi-plugin-content-manager": "3.0.0",
-    "strapi-plugin-users-permissions": "3.0.0",
+    "strapi-plugin-content-type-builder": "3.0.0",
     "strapi-plugin-email": "3.0.0",
     "strapi-plugin-upload": "3.0.0",
-    "strapi-connector-mongoose": "3.0.0"
+    "strapi-plugin-users-permissions": "3.0.0",
+    "strapi-provider-upload-aws-s3": "^3.1.6",
+    "strapi-utils": "3.0.0"
   },
   "author": {
     "name": "A Strapi developer"
