feat(comments): add replies

--- a/api/authors/models/authors.settings.json
+++ b/api/authors/models/authors.settings.json
@@ -20,8 +20,8 @@
       "type": "string"
     },
     "comments": {
-      "collection": "comments",
-      "via": "author"
+      "via": "author",
+      "collection": "comments"
     },
     "posts": {
       "collection": "posts",
