--- a/api/posts/models/posts.settings.json
+++ b/api/posts/models/posts.settings.json
@@ -13,8 +13,8 @@
       "type": "text"
     },
     "comments": {
-      "collection": "comments",
-      "via": "post"
+      "via": "post",
+      "collection": "comments"
     },
     "audio": {
       "model": "file",
