--- a/api/reactions/models/reactions.settings.json
+++ b/api/reactions/models/reactions.settings.json
@@ -22,8 +22,8 @@
       ]
     },
     "comment": {
-      "model": "comments",
-      "via": "reactions"
+      "via": "reactions",
+      "model": "comments"
     },
     "author": {
       "via": "reactions",
