feat(post): add video field

--- a/api/authors/models/authors.settings.json
+++ b/api/authors/models/authors.settings.json
@@ -24,8 +24,8 @@
       "collection": "comments"
     },
     "posts": {
-      "collection": "posts",
-      "via": "author"
+      "via": "author",
+      "collection": "posts"
     },
     "reactions": {
       "collection": "reactions",
