--- a/api/reactions/models/reactions.settings.json
+++ b/api/reactions/models/reactions.settings.json
@@ -10,8 +10,8 @@
   },
   "attributes": {
     "post": {
-      "model": "posts",
-      "via": "reactions"
+      "via": "reactions",
+      "model": "posts"
     },
     "type": {
       "type": "enumeration",
