--- a/.gitignore
+++ b/.gitignore
@@ -111,3 +111,8 @@ coverage
 exports
 .cache
 build
+
+############################
+# Custom
+############################
+credentials/firebase-service-account.json
