--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "faker": "^4.1.0"
   },
   "dependencies": {
+    "firebase-admin": "^9.4.2",
     "strapi": "3.0.0",
     "strapi-admin": "3.0.0",
     "strapi-connector-mongoose": "3.0.0",
