--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,14 @@
 HOST=0.0.0.0
 PORT=1337
+AWS_ACCESS_KEY_ID=
+AWS_ACCESS_SECRET=
+AWS_REGION=
+AWS_BUCKET=
+AWS_S3_ENDPOINT=
+GOOGLE_APPLICATION_CREDENTIALS=
+DATABASE_HOST=
+DATABASE_PORT=
+DATABASE_NAME=
+DATABASE_USERNAME=
+DATABASE_PASSWORD=
+ADMIN_JWT_SECRET=
