feat(posts): refactor lifecycle hooks and define lastActive field

--- a/api/authors/models/authors.settings.json
+++ b/api/authors/models/authors.settings.json
@@ -26,8 +26,8 @@
       "via": "author"
     },
     "posts": {
-      "collection": "posts",
-      "via": "author"
+      "via": "author",
+      "collection": "posts"
     },
     "reactions": {
       "collection": "reactions",
