--- a/api/posts/models/posts.settings.json
+++ b/api/posts/models/posts.settings.json
@@ -62,7 +62,8 @@
       "required": false
     },
     "lastActive": {
-      "type": "datetime"
+      "type": "datetime",
+      "default": "2021-02-07T01:00:00.000Z"
     },
     "score": {
       "type": "float",
