chore: install and configure pm2

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,6 @@ DATABASE_NAME=
 DATABASE_USERNAME=
 DATABASE_PASSWORD=
 ADMIN_JWT_SECRET=
+STRAPI_DISABLE_UPDATE_NOTIFICATION=true
+STRAPI_TELEMETRY_DISABLED=true
+NODE_ENV=development
