--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "0.2.1",
   "description": "A Strapi application",
   "scripts": {
-    "develop": "strapi develop",
-    "start": "strapi start",
+    "develop": "pm2-runtime start ecosystem.dev.config.js",
+    "start": "pm2-runtime start ecosystem.prod.config.js",
     "build": "strapi build",
     "strapi": "strapi",
     "heroku-postbuild": "npm run build && node ./migrate-3.4.0.js ./"
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "firebase-admin": "^9.4.2",
+    "pm2": "^4.5.4",
     "strapi": "3.4.1",
     "strapi-admin": "3.4.1",
     "strapi-connector-mongoose": "3.4.1",
