--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "start": "pm2-runtime start ecosystem.prod.config.js",
     "build": "strapi build",
     "strapi": "strapi",
+    "load:test": "artillery run load-test.yaml -o load-test-report.json",
     "heroku-postbuild": "npm run build && node ./migrate-3.4.0.js ./"
   },
   "devDependencies": {
+    "artillery": "^1.6.1",
     "axios": "^0.19.2",
     "faker": "^4.1.0"
   },
