--- a/api/posts/models/posts.settings.json
+++ b/api/posts/models/posts.settings.json
@@ -49,8 +49,8 @@
       "via": "reposts"
     },
     "author": {
-      "model": "authors",
-      "via": "posts"
+      "via": "posts",
+      "model": "authors"
     },
     "video": {
       "model": "file",
